<resources>
    <string name="app_name">EasyTodos</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_todo">AddTodoActivity</string>
    <string name="welcome_login">Welcome to EasyTodos,</string>
    <string name="welcome_quote">where every little bit counts</string>
</resources>
