<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:padding="8dp"
            android:hint="@string/prompt_email"
            android:background="@drawable/rounder_border_rectangle"
            android:id="@+id/email" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:textSize="18sp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:inputType="textPassword"
            android:ems="10"
            android:padding="8dp"
            android:hint="@string/prompt_password"
            android:background="@drawable/rounder_border_rectangle"
            android:id="@+id/password" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/email" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/action_sign_in_short"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:background="@drawable/rounder_border_rectangle"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/password" android:layout_marginStart="42dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="42dp"
            app:layout_constraintEnd_toEndOf="parent" android:textStyle="bold" android:textSize="18sp"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintVertical_bias="0.38"/>
    <TextView
            android:text="@string/welcome_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textSize="32sp" android:layout_marginTop="16dp" android:textAlignment="center"
            android:textStyle="bold"/>
    <TextView
            android:text="@string/welcome_quote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView2" app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="@+id/textView2" android:textStyle="bold"
            android:textColor="@color/colorPrimary" android:textSize="24sp" android:textAlignment="center"/>
</androidx.constraintlayout.widget.ConstraintLayout>